手动同步 Weblate 2404726 Translate giftsofgiving and tridents_n_stuff language packs to Chinese (Simplified)

--- a/global_packs/required_resources/aim_to_star_language_pack/assets/batsgalore/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/batsgalore/lang/zh_cn.json
@@ -1,1 +1,121 @@
-{}
+{
+    "entity.batsgalore.block_projectile": "方块弹射物",
+    "block.batsgalore.spooky_oak_button": "幽灵橡木按钮",
+    "item.batsgalore.candy_cane": "拐杖糖",
+    "block.batsgalore.white_pine_pressure_plate": "白松压力板",
+    "block.batsgalore.spooky_oak_stripped_log": "去皮幽灵橡木原木",
+    "item.batsgalore.herobrine_bat_spawn_egg": "Him蝙蝠刷怪蛋",
+    "advancements.batsgalore.bat_death.desc": "你杀死了一些蝙蝠，为自己赢得了一些糖果！",
+    "item.batsgalore.ghost_bat_spawn_egg": "幽灵蝙蝠刷怪蛋",
+    "block.batsgalore.white_pine_sapling": "白松树树苗",
+    "entity.batsgalore.jack_o_lantern_projectile": "南瓜灯弹射物",
+    "entity.batsgalore.herobrine_bat": "Him蝙蝠",
+    "item.batsgalore.spooky_oak_boat": "幽灵橡木船",
+    "entity.batsgalore.void_bat": "虚空蝙蝠",
+    "entity.batsgalore.candy_cane_bat": "拐杖糖蝙蝠",
+    "item.batsgalore.zombie_flesh_lollipop": "僵尸肉棒棒糖",
+    "entity.batsgalore.mod_boat": "Mod船",
+    "item.batsgalore.spooky_oak_chest_boat": "幽灵橡木运输船",
+    "block.batsgalore.spooky_oak_trapdoor": "幽灵橡木活板门",
+    "block.batsgalore.white_pine_slab": "白松木台阶",
+    "item.batsgalore.elf_bat_spawn_egg": "精灵蝙蝠刷怪蛋",
+    "block.batsgalore.spooky_oak_stripped_wood": "去皮幽灵橡木",
+    "advancements.batsgalore.candy_collection": "糖果收集",
+    "entity.batsgalore.slime_bat": "史莱姆蝙蝠",
+    "item.batsgalore.shulker_bat_spawn_egg": "潜影贝蝙蝠刷怪蛋",
+    "item.batsgalore.reindeer_bat_spawn_egg": "驯鹿蝙蝠刷怪蛋",
+    "entity.batsgalore.undead_bat": "亡灵蝙蝠",
+    "item.batsgalore.sculk_bat_spawn_egg": "幽匿蝙蝠刷怪蛋",
+    "entity.batsgalore.creeper_bat": "苦力怕蝙蝠",
+    "item.batsgalore.sculk_candy": "幽匿糖果",
+    "block.batsgalore.spooky_oak_fence_gate": "幽灵橡木栅栏门",
+    "item.batsgalore.generic_candy": "普通糖果",
+    "item.batsgalore.witches_brew": "女巫酿造",
+    "entity.batsgalore.player_bat": "玩家蝙蝠",
+    "item.batsgalore.bat_wings": "蝙蝠翅膀",
+    "item.batsgalore.steve_bat_spawn_egg": "史蒂夫蝙蝠刷怪蛋",
+    "block.batsgalore.spooky_oak_wood": "幽灵橡木",
+    "item.batsgalore.creeper_bat_spawn_egg": "苦力怕蝙蝠刷怪蛋",
+    "block.batsgalore.white_pine_leaves": "白松树树叶",
+    "entity.batsgalore.witch_bat": "女巫蝙蝠",
+    "item.batsgalore.elf_hat": "精灵帽子",
+    "item.batsgalore.evil_bat_spawn_egg": "邪恶蝙蝠刷怪蛋",
+    "block.batsgalore.white_pine_button": "白松木按钮",
+    "block.batsgalore.spooky_oak_sign": "幽灵橡木告示牌",
+    "item.batsgalore.player_bat_spawn_egg": "玩家蝙蝠刷怪蛋",
+    "item.batsgalore.white_pine_chest_boat": "白松木运输船",
+    "entity.batsgalore.ghost_bat": "幽灵蝙蝠",
+    "entity.batsgalore.shulker_bat": "潜影贝蝙蝠",
+    "block.batsgalore.spooky_oak_stairs": "幽灵橡木楼梯",
+    "item.batsgalore.slime_core": "史莱姆核心",
+    "entity.batsgalore.alex_bat": "亚历克斯蝙蝠",
+    "item.batsgalore.experience_orb_bat_spawn_egg": "经验球蝙蝠刷怪蛋",
+    "itemGroup.batsgalore.tab": "Bats Galore",
+    "entity.batsgalore.reindeer_bat": "驯鹿蝙蝠",
+    "block.batsgalore.spooky_oak_slab": "幽灵橡木台阶",
+    "item.batsgalore.undead_bat_spawn_egg": "亡灵蝙蝠刷怪蛋",
+    "entity.batsgalore.witchs_broom": "女巫的扫帚",
+    "item.batsgalore.wither_skeleton_bat_spawn_egg": "凋灵骷髅蝙蝠刷怪蛋",
+    "item.batsgalore.witch_bat_spawn_egg": "女巫蝙蝠刷怪蛋",
+    "block.batsgalore.spooky_oak_leaves": "幽灵橡树树叶",
+    "advancements.batsgalore.massacre": "蝙蝠大屠杀",
+    "item.batsgalore.shulker_core": "潜影贝核心",
+    "entity.batsgalore.skeleton_bat": "骷髅蝙蝠",
+    "item.batsgalore.skeleton_bat_spawn_egg": "骷髅蝙蝠刷怪蛋",
+    "item.batsgalore.slime_bat_spawn_egg": "史莱姆蝙蝠刷怪蛋",
+    "block.batsgalore.white_pine_sign": "白松木告示牌",
+    "block.batsgalore.white_pine_log": "白松原木",
+    "item.batsgalore.white_pine_boat": "白松木船",
+    "item.batsgalore.tnt_lollipop": "TNT棒棒糖",
+    "entity.batsgalore.elf_bat": "精灵蝙蝠",
+    "item.batsgalore.skull_candy": "骷髅糖果",
+    "block.batsgalore.white_pine_stairs": "白松木楼梯",
+    "advancements.batsgalore.massacre.desc": "你这个怪物！杀了那么多蝙蝠，只是让自己获得了一对蝙蝠翅膀！",
+    "biome.batsgalore.spooky_oak_biome": "幽灵橡树林生物群系",
+    "item.batsgalore.undead_core": "亡灵核心",
+    "entity.batsgalore.evil_bat": "邪恶蝙蝠",
+    "block.batsgalore.spooky_oak_fence": "幽灵橡木栅栏",
+    "block.batsgalore.white_pine_hanging_sign": "悬挂的白松木告示牌",
+    "block.batsgalore.white_pine_fence": "白松木栅栏",
+    "item.batsgalore.wither_skull_candy": "凋灵头颅糖果",
+    "item.batsgalore.alex_bat_spawn_egg": "亚历克斯蝙蝠",
+    "item.batsgalore.suspicious_candy": "可疑糖果",
+    "block.batsgalore.spooky_oak_planks": "幽灵橡木木板",
+    "block.batsgalore.spooky_oak_log": "幽灵橡木原木",
+    "block.batsgalore.spooky_pedestal": "幽灵展示台",
+    "block.batsgalore.white_pine_stripped_log": "去皮白松木原木",
+    "advancements.batsgalore.bat_death": "蝙蝠之死",
+    "item.batsgalore.void_bat_spawn_egg": "虚空蝙蝠刷怪蛋",
+    "block.batsgalore.white_pine_fence_gate": "白松木栅栏门",
+    "advancements.batsgalore.candy_collection.desc": "收集所有的糖果！",
+    "entity.batsgalore.pumpkin_bat": "南瓜蝙蝠",
+    "block.batsgalore.white_pine_planks": "白松木板",
+    "item.batsgalore.reindeer_nose": "驯鹿鼻",
+    "entity.batsgalore.experience_orb_bat": "经验球蝙蝠",
+    "entity.batsgalore.mod_chest_boat": "Mod运输船",
+    "block.batsgalore.white_pine_door": "白松木门",
+    "block.batsgalore.spooky_oak_pressure_plate": "幽灵橡木压力板",
+    "item.batsgalore.candy_cane_bat_spawn_egg": "拐杖糖蝙蝠刷怪蛋",
+    "block.batsgalore.white_pine_stripped_wood": "去皮白松木",
+    "entity.batsgalore.wither_skeleton_bat": "凋灵骷髅蝙蝠",
+    "block.batsgalore.white_pine_trapdoor": "白松木活板门",
+    "block.batsgalore.spooky_oak_door": "幽灵橡木门",
+    "item.batsgalore.pumpkin_bat_spawn_egg": "南瓜蝙蝠刷怪蛋",
+    "item.batsgalore.sculk_core": "幽匿核心",
+    "item.batsgalore.witchs_broom": "女巫的扫帚",
+    "block.batsgalore.spooky_oak_sapling": "幽灵橡树树苗",
+    "item.batsgalore.pumpkin_chocolate_bar": "南瓜巧克力棒",
+    "block.batsgalore.white_pine_wood": "白松木",
+    "block.batsgalore.spooky_oak_hanging_sign": "悬挂式幽灵橡木告示牌",
+    "entity.batsgalore.steve_bat": "史蒂夫蝙蝠",
+    "entity.batsgalore.sculk_bat": "幽匿蝙蝠",
+    "item.batsgalore.biggest_fan_bat_spawn_egg": "头号粉丝蝙蝠刷怪蛋",
+    "entity.batsgalore.winged_turmoil": "翼之混沌者",
+    "block.batsgalore.statue_of_turmoil": "混沌者雕像",
+    "item.batsgalore.novelty_drinking_hat": "新奇饮水帽",
+    "item.batsgalore.bitesized_jelly": "一口一个的果冻",
+    "block.batsgalore.decorated_white_pine_leaves": "带装饰的白松树树叶",
+    "item.batsgalore.staff_of_turmoil": "混沌权杖",
+    "entity.batsgalore.biggest_fan_bat": "头号粉丝蝙蝠",
+    "item.batsgalore.winged_turmoil_spawn_egg": "翼之混沌者刷怪蛋"
+}
