--- a/global_packs/required_resources/aim_to_star_language_pack/assets/invoke/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/invoke/lang/zh_cn.json
@@ -1,19 +1,104 @@
 {
-    "item.invoke.arcaneinvoker_spell_book": "奥秘法术调用",
-    "effect.invoke.arcaneoverdrive": "奥秘法术超载",
-    "spell.invoke.agonizingblast.description": "在一条直线上攻击敌人三次。每一次爆炸都会造成{damage}点奥术伤害，并在击中的第一个敌人周围再触发八次爆炸，如果他们找到目标，每一次又会触发八次，以此类推。不能无限重复。",
-    "spell.invoke.blink.description": "抛出一颗末影珍珠。",
-    "spell.invoke.risingflame.description": "充能以在一段时间内炙烤一个敌人，每秒造成 {damage} 点火焰法术伤害。",
-    "entity.invoke.gazehitter": "终末凝视",
-    "spell.invoke.supernova.description": "在你周围大范围内剧烈爆炸，在12格的半径内造成 {damage} 点火焰法术伤害。",
+    "spell.invoke.upheaval.description": "吟唱期间可以选择任意数量的敌人。吟唱结束后，被选中的敌人下方会生成一个迷你冰川，造成的伤害等同于法术“冰川连锁”造成的伤害。",
+    "item.invoke.fireinvoker_spell_book": "火焰咒典",
     "effect.invoke.freezeaura": "寒凛之域",
-    "spell.invoke.icestorm.description": "充能释放大量霜弹，造成3x {damage} 点霜冻dps。",
-    "spell.invoke.icebarrage.description": "充能释放大量霜弹，造成 {damage} 点霜冻dps。",
-    "item.invoke.fireinvoker_spell_book": "火焰召唤",
-    "spell.invoke.sharedsuffering.description": "充能以对一个敌人造成 {damage} 点霜冻DPS，你和敌人都会被冻结。你的霜冻之力将会随着你的充能而不断增强。",
-    "spell.invoke.resonance.description": "充能以在你周围的区域造成 {damage} 点霜伤害。如果周围没有迷你冰川，可以在你附近召唤4座。更大区域内的所有迷你冰川也会在其周围区域造成同样的霜冻伤害。",
-    "spell.invoke.flameray.description": "充能以发射一束非常短促的火焰，每秒造成 {damage} 点火焰法术伤害。火束的持续时间永远不会超过半秒。",
+    "spell.invoke.resonance.description": "施法后在你周围的区域内每秒造成5次 {damage} 点的寒冰伤害。更大区域内的所有迷你冰川也会在其周围区域造成同样的寒冰伤害。如果你的周围没有迷你冰川，施法后会在你附近召唤4座。",
+    "spell.invoke.risingflame.description": "吟唱后将敌人点燃，燃烧将持续一段时间，期间每秒造成 {damage} 点火焰法术伤害。",
+    "spell.invoke.blink.description": "抛出一颗末影珍珠。",
+    "entity.invoke.gazehitter": "终末凝视",
+    "spell.invoke.armageddon.description": "吟唱后在目标上空召唤小流星，每颗流星每秒造成 {damage} 点火焰伤害。",
+    "spell.invoke.icestorm.description": "施法释放大量霜弹，每秒造成 3x{damage} 点寒冰伤害。",
+    "spell.invoke.sharedsuffering.description": "吟唱并对单个敌人造成每秒 {damage} 点寒冰伤害，你和敌人都会被寒冰之力侵袭。你的寒冰法强会随着法术吟唱而不断增强。",
+    "spell.invoke.agonizingblast.description": "直线轰击敌人3次，以被击中的第一个敌人为圆心，会向外再触发八次直线轰击，每一个能命中目标的轰击又会再触发八次轰击，以此类推，每一次轰击都会造成 {damage} 点奥秘伤害，但不能无限重复。",
+    "spell.invoke.flameray.description": "吟唱后发射一道持续时间短暂的火束，每秒造成 {damage} 点火焰法术伤害。火束的持续时间永远不会超过半秒。",
+    "spell.invoke.supernova.description": "在你周围的大范围内造成剧烈爆炸，在12格半径内造成 {damage} 点火焰法术伤害。",
+    "spell.invoke.icebarrage.description": "施法释放一连串霜弹，每秒造成 {damage} 点寒冰伤害。",
     "spell.invoke.deathchill.description": "充能以将你周围的每个人冻结在一大片区域10秒，当他们冻结在该区域时法术会同时冷却。",
-    "spell.invoke.upheaval.description": "充能以选择任意数量的敌人。被选中的敌人会在其下方产生一个迷你冰川，并造成一连串的冰川伤害。",
-    "spell.invoke.armageddon.description": "充能以在目标上空召唤小流星，每秒每颗流星造成 {damage} 点火力伤害。"
+    "effect.invoke.arcaneoverdrive": "奥秘法术超载",
+    "item.invoke.arcaneinvoker_spell_book": "奥秘咒典",
+    "spell.invoke.enders_gaze.description": "召唤五只围绕目标旋转的末影之眼，它们每0.4秒就会造成一次 {damage} 点的奥秘伤害，持续4秒。当目标死亡时，末影之眼会分离并重新追索到最近的敌人上，同时刷新持续时间。",
+    "spell.invoke.buckshot.description": "以圆锥形向外射出12个细小的流星碎片，每个碎片都会造成 {damage} 点火焰法术伤害。",
+    "spell.invoke.greaterfireball.name": "大火球术",
+    "spell.invoke.twofire.name": "调用火焰术 II",
+    "spell.invoke.glacier.name": "连锁冰川",
+    "entity.invoke.glaciermedium": "二级冰川",
+    "item.invoke.wildinvoker_spell_book": "自然咒典",
+    "spell.invoke.meteorrush.description": "将自己转化成纯粹的火焰并向前冲刺，吟唱结束后在冲刺终点8格半径内产生爆炸，并造成 {damage} 点火焰法术伤害。",
+    "spell.invoke.greaterfireball.description": "朝目标方向发射一个超载火球，对目标8格半径内造成最多（{damage}）点火焰法术伤害。",
+    "spell.invoke.runicinvocation.description": "当你施法时，你会获得对应元素的符文。施展法术来消耗这些符文从而调用一个更强大的法术。",
+    "spell.invoke.icestorm.name": "冰风暴",
+    "spell.invoke.sonicboom.name": "音爆",
+    "spell.invoke.wild.name": "调用外来法术",
+    "spell.invoke.twofrost.name": "调用霜冻术 II",
+    "spell.invoke.deathchill.name": "死亡寒意",
+    "spell.invoke.onefrost.name": "调用霜冻术 I",
+    "spell.invoke.nullinvoke.description": "你没有咒术魔能。使用空白符文来驱散该物品的咒术魔法。",
+    "spell.invoke.supernova.name": "超新星",
+    "spell.invoke.hijack.description": "投掷一颗带有目标名字的末影珍珠。",
+    "spell.invoke.scorchingwind.name": "灼热新星",
+    "spell.invoke.hijack.name": "操纵",
+    "item.invoke.frostinvoker_spell_book": "寒冰咒典",
+    "item.invoke.invoker_spell_book": "符文咒典",
+    "entity.invoke.glacierlarge": "三级冰川",
+    "spell.invoke.runicinvocation.name": "符文调用",
+    "spell.invoke.buckshot.name": "流星四射",
+    "spell.invoke.onefire.name": "调用火焰术 I",
+    "spell.invoke.threearcane.name": "调用奥秘 III",
+    "spell.invoke.onearcane.description": "调用奥秘力量，加一召唤之力。",
+    "item.invoke.null_rune": "空白符文",
+    "entity.invoke.glaciersmall": "一级冰川",
+    "spell.invoke.twofire.description": "调用火焰之力，加二召唤之力。",
+    "spell.invoke.arcaneoverdrive.description": "制造一颗新星，对周围的敌人造成 {damage} 点奥秘伤害，并给予自己一个可叠加的攻速增益。可以在命中时触发。",
+    "effect.invoke.flamerush": "火焰跟踪",
+    "spell.invoke.threefire.description": "调用火海之力，加三召唤之力。",
+    "spell.invoke.heo.name": "寒冰召唤：Heo",
+    "spell.invoke.resonance.name": "霜之回响",
+    "spell.invoke.homing.description": "发射一连串的四个火球，这些火球可在敌人之间和方块表面反弹，每个火球造成 {damage} 点火焰法术伤害。",
+    "spell.invoke.amethystburst.description": "散射八颗紫水晶，如果选中了目标，所有紫水晶都会冲向目标。每一颗紫水晶都会造成 {damage} 点奥秘法术伤害。",
+    "spell.invoke.arcaneoverdrive.name": "奥秘坠击",
+    "spell.invoke.magic_missile.description": "每秒造成 {damage} 点奥秘伤害。法术释放后就会开始吟唱并进入冷却，多个魔法导弹会在吟唱期间逐渐累积成型，其施法对象是你在吟唱期间选中的任意目标，吟唱结束后所有魔法导弹都会依次向施法目标射去。",
+    "spell.invoke.glacialhammer.description": "猛挥你的武器，对你前方的敌人造成{damage}点霜冻伤害，并将第一个被击中的敌人包裹在一个迷你冰川中，这个冰川会同时造成法术“冰川连锁”中的伤害。你可以挥动武器打碎迷你冰川，在区域内再次造成相同伤害。",
+    "spell.invoke.twofrost.description": "调用雾凇之力，加二召唤之力。",
+    "effect.invoke.invoking": "调用法术",
+    "spell.invoke.bouncing.description": "释放一枚致命的疫源弹射物，它会持续飞行128格直到命中敌人。疫源弹射物命中后会反弹，反弹时造成 {damage} 点奥秘法术伤害，并产生4个不可反弹的弹射物，同时给予你1游戏刻的生命恢复X效果。",
+    "spell.invoke.sharedsuffering.name": "共患其苦",
+    "spell.invoke.glacier.description": "召唤出一连串的四个小型冰川，每个冰川都会比上一个大，并在其覆盖的区域内造成50%基础伤害，基础伤害是 {damage} 点寒冰伤害。",
+    "spell.invoke.nullinvoke.name": "调用法术：空",
+    "spell.invoke.armageddon.name": "诸神黄昏",
+    "spell.invoke.agonizingblast.name": "痛苦爆破",
+    "spell.invoke.onefrost.description": "调用霜冻之力，加一召唤之力。",
+    "spell.invoke.gon.name": "奥秘召唤：Gon",
+    "spell.invoke.enders_gaze.name": "末影凝视",
+    "spell.invoke.onearcane.name": "调用奥秘 I",
+    "spell.invoke.twoarcane.name": "调用奥秘 II",
+    "spell.invoke.sonicboom.description": "向目标方向发射音爆，对第一个命中的敌人造成 {damage} 点奥秘伤害。",
+    "spell.invoke.threefrost.name": "调用霜冻术 III",
+    "spell.invoke.rah.name": "火焰召唤：Rah",
+    "spell.invoke.icebarrage.name": "冰封弹幕",
+    "spell.invoke.upheaval.name": "冰川剧变",
+    "spell.invoke.combustion.description": "向目标方向发射一块高速飞行的不稳定流星碎片，在命中的第一个目标周围12格半径内造成 {damage} 点火焰法术伤害。",
+    "spell.invoke.gon.description": "用奥秘能量轰击一个敌人，造成 {damage} 点奥秘伤害。命中时给予施法者一级奥秘魔能，最多叠加至3级。",
+    "spell.invoke.scorchingwind.description": "用焚风炙烤你周围的区域，点燃敌人，并造成 {damage} 点火焰法术伤害。",
+    "spell.invoke.onefire.description": "调用火之力，加一召唤之力。",
+    "itemGroup.invoke.general": "Invocation Items",
+    "spell.invoke.bouncing.name": "瘟疫肆虐",
+    "spell.invoke.homing.name": "炎流",
+    "spell.invoke.wild.description": "随机调出一个法术。",
+    "spell.invoke.freezeaura.name": "急冻光环",
+    "spell.invoke.combustion.name": "爆裂流星",
+    "spell.invoke.heo.description": "召唤一个冰块来攻击敌人，造成 {damage} 点霜冻伤害。命中时给予施法者一级寒冰魔能，最多叠加至3级。",
+    "spell.invoke.twoarcane.description": "调用神秘之力，加二召唤之力。",
+    "spell.invoke.amethystburst.name": "紫晶风暴",
+    "spell.invoke.threearcane.description": "调用骇人的力量，加三召唤之力。",
+    "spell.invoke.magic_missile.name": "魔法导弹",
+    "spell.invoke.freezeaura.description": "打开和关闭一个光环，让你周围的敌人冻结10秒，当他们停留在该区域时将刷新光环。每冻结一个敌人消耗一个冰霜符文。",
+    "spell.invoke.risingflame.name": "熊熊烈火",
+    "entity.invoke.glacierhuge": "四级冰川",
+    "spell.invoke.blink.name": "闪现",
+    "spell.invoke.rah.description": "发射一个火球，造成 {damage} 点火焰伤害。命中时给予施法者一级火焰魔能，最多叠加至3级。",
+    "spell.invoke.glacialhammer.name": "冰川之锤",
+    "spell.invoke.meteorrush.name": "跟踪火焰",
+    "spell.invoke.threefrost.description": "调用冻创之力，加三召唤之力。",
+    "spell.invoke.threefire.name": "调用火焰术 III",
+    "spell.invoke.flameray.name": "灼热射线"
 }
