--- a/global_packs/required_resources/aim_to_star_language_pack/assets/perfectplushies/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/perfectplushies/lang/zh_cn.json
@@ -1,44 +1,60 @@
 {
-    "block.perfectplushies.silk_plushie": "毛绒玩具-Silk",
-    "block.perfectplushies.bear_plushie": "毛绒玩具-熊",
-    "block.perfectplushies.capybara_plushie": "毛绒玩具-水豚",
-    "plushie.description.sirjain_plushie": "Perfect Plushies的协作开发者\nHerespawn的协作开发者\nThrowable Fluids的开发者",
-    "plushie.description.sirjain_plushie_rare": "Perfect Plushies的协作开发者\nHerespawn的协作开发者\nThrowable Fluids的开发者",
-    "plushie.description.nyf_plushie": "Perfect Plushies的协作开发者\n许多以“Nyf's”为模组名开头的模组的开发者",
-    "block.perfectplushies.daniel_plushie": "毛绒玩具-Daniel",
-    "block.perfectplushies.deer_plushie": "毛绒玩具-鹿",
-    "plushie.description.tslat_plushie": "虚无世界的开发者\nSmartBrainLib的开发者\nGeckolib的维护者",
-    "plushie.description.gamerpotion_plushie": "DarkRPG整合包的开发者！",
-    "plushie.description.june_plushie": "Plushables的开发者",
-    "plushie.description.daniel_plushie": "Spray Madness的开发者",
-    "plushie.description.gamerpotion_plushie_rare": "DarkRPG整合包的开发者！",
-    "block.perfectplushies.dolphin_plushie": "毛绒玩具-海豚",
-    "block.perfectplushies.elephant_plushie": "毛绒玩具-大象",
-    "block.perfectplushies.fox_plushie": "毛绒玩具-狐狸",
-    "block.perfectplushies.frog_plushie": "毛绒玩具-青蛙",
-    "block.perfectplushies.gamerpotion_plushie": "毛绒玩具-GamerPotion",
-    "block.perfectplushies.gamerpotion_plushie_rare": "毛绒玩具-GamerPotion",
-    "block.perfectplushies.hippo_plushie": "毛绒玩具-河马",
-    "tooltip.perfectplushies.advanced": "按下%s查看更多信息",
-    "block.perfectplushies.june_plushie": "毛绒玩具-June",
+    "block.perfectplushies.monkey_plushie": "毛绒玩具-猴子",
     "block.perfectplushies.lion_cub_plushie": "毛绒玩具-幼狮",
-    "plushie.description.sizableshrimp_plushie": "NeoForge开发者\n对社区非常有帮助的开发者",
-    "block.perfectplushies.nyf_plushie": "毛绒玩具-Nyf",
-    "itemGroup.perfectplushies.tab": "Perfect Plushies",
-    "plushie.description.silk_plushie": "Modding社区的支柱！",
+    "block.perfectplushies.hippo_plushie": "毛绒玩具-河马",
+    "plushie.description.june_plushie": "Plushables的开发者",
+    "block.perfectplushies.sirjain_plushie_rare": "毛绒玩具-SirJain",
+    "plushie.description.sirjain_plushie_rare": "Perfect Plushies的协作开发者\nHerespawn的协作开发者\nThrowable Fluids的开发者",
+    "block.perfectplushies.june_plushie": "毛绒玩具-June",
+    "plushie.description.rocris_plushie": "早期支持者",
+    "block.perfectplushies.dog_plushie": "毛绒玩具-狗",
+    "block.perfectplushies.elephant_plushie": "毛绒玩具-大象",
+    "plushie.description.gamerpotion_plushie": "DarkRPG整合包的开发者！",
     "block.perfectplushies.rabbit_plushie": "毛绒玩具-兔子",
     "tooltip.perfectplushies.shift": "SHIFT",
-    "block.perfectplushies.sirjain_plushie": "毛绒玩具-SirJain",
-    "block.perfectplushies.sirjain_plushie_rare": "毛绒玩具-SirJain",
-    "block.perfectplushies.sizableshrimp_plushie": "毛绒玩具-SizableShrimp",
-    "block.perfectplushies.tslat_plushie": "毛绒玩具-Tslat",
-    "block.perfectplushies.cat_plushie": "毛绒玩具-猫",
-    "block.perfectplushies.dog_plushie": "毛绒玩具-狗",
-    "block.perfectplushies.monkey_plushie": "毛绒玩具-猴子",
-    "entity.perfectplushies.wandering_plushie_trader": "流浪毛绒玩具商人",
+    "block.perfectplushies.gamerpotion_plushie_rare": "毛绒玩具-GamerPotion",
     "block.perfectplushies.joosh_plushie": "毛绒玩具-Joosh",
     "plushie.description.joosh_plushie": "Bonsai工作室的首席艺术家",
-    "block.perfectplushies.rocris_plushie": "毛绒玩具-RoCris",
+    "block.perfectplushies.frog_plushie": "毛绒玩具-青蛙",
+    "plushie.description.sizableshrimp_plushie": "NeoForge开发者\n对社区非常有帮助的开发者",
+    "plushie.description.nyf_plushie": "Perfect Plushies的协作开发者\n许多以“Nyf's”为模组名开头的模组的开发者",
+    "block.perfectplushies.silk_plushie": "毛绒玩具-Silk",
+    "block.perfectplushies.daniel_plushie": "毛绒玩具-Daniel",
+    "block.perfectplushies.dolphin_plushie": "毛绒玩具-海豚",
+    "plushie.description.silk_plushie": "Modding社区的支柱！",
+    "plushie.description.daniel_plushie": "Spray Madness的开发者",
+    "block.perfectplushies.sizableshrimp_plushie": "毛绒玩具-SizableShrimp",
+    "block.perfectplushies.nyf_plushie": "毛绒玩具-Nyf",
+    "block.perfectplushies.sirjain_plushie": "毛绒玩具-SirJain",
+    "plushie.description.sirjain_plushie": "Perfect Plushies的协作开发者\nHerespawn的协作开发者\nThrowable Fluids的开发者",
+    "block.perfectplushies.tslat_plushie": "毛绒玩具-Tslat",
+    "block.perfectplushies.bear_plushie": "毛绒玩具-熊",
+    "plushie.description.tslat_plushie": "虚无世界的开发者\nSmartBrainLib的开发者\nGeckolib的维护者",
     "block.perfectplushies.turtle_plushie": "毛绒玩具-海龟",
-    "plushie.description.rocris_plushie": "早期支持者"
+    "block.perfectplushies.rocris_plushie": "毛绒玩具-RoCris",
+    "itemGroup.perfectplushies.tab": "Perfect Plushies",
+    "block.perfectplushies.cat_plushie": "毛绒玩具-猫",
+    "block.perfectplushies.gamerpotion_plushie": "毛绒玩具-GamerPotion",
+    "plushie.description.gamerpotion_plushie_rare": "DarkRPG整合包的开发者！",
+    "block.perfectplushies.capybara_plushie": "毛绒玩具-水豚",
+    "tooltip.perfectplushies.advanced": "按下%s查看更多信息",
+    "entity.perfectplushies.wandering_plushie_trader": "流浪毛绒玩具商人",
+    "block.perfectplushies.robin_plushie": "旅鸫毛绒玩具",
+    "block.perfectplushies.doe_plushie": "雌兔毛绒玩具",
+    "block.perfectplushies.rubber_duck_plushie": "橡皮鸭毛绒玩具",
+    "block.perfectplushies.duck_plushie": "鸭子毛绒玩具",
+    "item.perfectplushies.wandering_plushie_trader_spawn_egg": "流浪毛绒玩具商刷怪蛋",
+    "block.perfectplushies.goose_plushie": "天鹅毛绒玩具",
+    "block.perfectplushies.reindeer_plushie": "驯鹿毛绒玩具",
+    "block.perfectplushies.seal_plushie": "海豹毛绒玩具",
+    "block.perfectplushies.panda_plushie": "大熊猫毛绒玩具",
+    "block.perfectplushies.snow_fox_plushie": "雪狐毛绒玩具",
+    "block.perfectplushies.geode_plushie": "晶洞毛绒玩具",
+    "block.perfectplushies.red_ruffed_lemur_plushie": "红斑狐猴毛绒玩具",
+    "block.perfectplushies.red_panda_plushie": "小熊猫毛绒玩具",
+    "plushie.description.geode_plushie": "社区支柱",
+    "block.perfectplushies.raccoon_plushie": "浣熊毛绒玩具",
+    "block.perfectplushies.red_fox_plushie": "赤狐毛绒玩具",
+    "block.perfectplushies.mouse_plushie": "老鼠毛绒玩具",
+    "block.perfectplushies.hummingbird_plushie": "蜂鸟毛绒玩具"
 }
