--- a/global_packs/required_resources/aim_to_star_language_pack/assets/spellbladenext/lang/zh_cn.json
+++ b/global_packs/required_resources/aim_to_star_language_pack/assets/spellbladenext/lang/zh_cn.json
@@ -1,7 +1,181 @@
 {
     "itemGroup.spellbladenext.general": "Spellblades and Such",
-    "item.spellbladenext.arcane_blade": "奥术魔剑",
-    "entity.spellbladenext.amethyst": "紫水晶",
     "spell.spellbladenext.whirlingblades.description": "像激流附魔的三叉戟一样瞄准并发射自己",
-    "spell.spellbladenext.frostvert.description": "攻击前方的敌人，造成1.5倍近战伤害与{damage}点附带火焰伤害，并承受一股向上的推力"
+    "entity.spellbladenext.amethyst": "紫水晶",
+    "item.spellbladenext.arcane_blade": "奥秘魔剑",
+    "spell.spellbladenext.frostvert.description": "释放烈焰猛击，滞空时会先将自己发射出去。造成 {damage}_0 点物理和额外 {damage}_1 点火焰范围伤害。释放时，你将会安全落地。",
+    "item.spellbladenext.arcane_battlemage_spell_book": "奥秘术典",
+    "item.spellbladenext.arcane_orb": "奥秘法球",
+    "item.spellbladenext.frost_battlemage_spell_book": "寒冰术典",
+    "item.spellbladenext.fire_orb": "火焰法球",
+    "item.spellbladenext.arcane_claymore": "奥秘阔剑",
+    "item.spellbladenext.fire_battlemage_spell_book": "火焰术典",
+    "item.spellbladenext.frost_orb": "寒冰法球",
+    "item.spellbladenext.monkeystaff": "金箍棒",
+    "spell.spellbladenext.reckoning.description": "旋舞金箍棒，每秒造成 {damage} 点物理伤害（无法暴击），攻击速度对伤害有加成。攻击多个敌人时没有伤害衰减。",
+    "spell.spellbladenext.combustion.description": "被动：你的每一次攻击都会点燃敌人，燃烧持续2秒。主动：施放法术时，已被点燃的敌人受到燃烧伤害的频率会加快，其每秒受到 {damage} 点火焰伤害。",
+    "spell.spellbladenext.monkeyreflect.description": "释放技能掀起飓风，狠狠击退敌人并对其造成每秒 {damage} 点物理伤害（可以暴击）。",
+    "attribute.name.spellbladenext.convertfromarcane": "奥秘法术强度对攻击伤害的额外加成",
+    "spell.spellbladenext.monkeyslam.description": "直冲云霄，法术施放期间免疫伤害。",
+    "attribute.name.spellbladenext.converttoarcane": "攻击伤害对奥秘法术强度的额外加成",
+    "spell.spellbladenext.monkeyreflect.name": "裂刃飓风",
+    "item.spellbladenext.omni": "具象全知",
+    "entity.spellbladenext.magister": "魔剑教士",
+    "item.spellbladenext.blazing_legs": "烈焰教士护腿",
+    "item.spellbladenext.arcaneherald_chest": "神秘纹章官胸甲",
+    "item.spellbladenext.magus_chest": "源初长袍",
+    "spell.spellbladenext.combustion.name": "煽风点火",
+    "item.spellbladenext.runeblazing_chest": "烈焰符文胸甲",
+    "item.spellbladenext.runeblazing_head": "烈焰符文头盔",
+    "entity.spellbladenext.hexbladeportal": "魔剑会之门",
+    "item.spellbladenext.runeblaze_plate": "烈焰符文板",
+    "item.spellbladenext.ashherald_head": "灰烬纹章官头盔",
+    "item.spellbladenext.eviscerateoil": "杀戮涂料",
+    "spell.spellbladenext.finalstrike.name": "音速斩击",
+    "spell.spellbladenext.arcaneoverdrive.name": "奥秘超载",
+    "item.spellbladenext.runeblazing_legs": "烈焰符文护腿",
+    "spell.spellbladenext.flicker_strike.name": "烈焰闪击",
+    "spell.spellbladenext.echoes.name": "符文回响",
+    "item.spellbladenext.frostherald_feet": "严寒纹章官靴子",
+    "spell.spellbladenext.smite.description": "重击你面前一定范围内的敌人，造成 {damage}_0 点物理伤害（无法暴击），每命中一个敌人，额外造成 {damage}_1 点治愈伤害，并且对亡灵生物造成额外50%治愈伤害。",
+    "spell.spellbladenext.arcaneflourish.description": "快速旋转，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点奥秘伤害。",
+    "item.spellbladenext.runic_echoes_spell_book": "余音残卷",
+    "item.spellbladenext.smiteoil": "惩灭涂料",
+    "item.spellbladenext.runefrost_nugget": "严寒符文螺栓",
+    "spell.spellbladenext.coldbuff.name": "冰封之王的诅咒",
+    "spell.spellbladenext.reckoning.name": "大闹天宫",
+    "spell.spellbladenext.frostslash.name": "寒光阵风",
+    "item.spellbladenext.magus_legs": "源初护腿",
+    "item.spellbladenext.runefrosted_chest": "严寒符文胸甲",
+    "item.spellbladenext.runegleaming_head": "隐烁符文头盔",
+    "item.spellbladenext.ashherald_chest": "灰烬纹章官胸甲",
+    "item.spellbladenext.blazing_head": "破法头盔",
+    "item.spellbladenext.spelloil": "法术涂料",
+    "spell.spellbladenext.flicker_strike.description": "依次跃向周围的敌人，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点火焰伤害，攻击速度对伤害有加成。若只有一个目标，则集中攻击一个目标。",
+    "effect.spellbladenext.magisterfriend": "教士之睐",
+    "item.spellbladenext.gleaming_head": "克法之冠",
+    "spell.spellbladenext.eviscerate.name": "屠杀",
+    "spell.spellbladenext.flameslash.name": "裂焰",
+    "item.spellbladenext.magus_feet": "源初靴子",
+    "entity.spellbladenext.flamewaveprojectile": "焰浪",
+    "item.spellbladenext.glacial_gladius": "冰川短剑",
+    "item.spellbladenext.arcaneherald_head": "神秘纹章官头盔",
+    "spell.spellbladenext.whirlingblades.name": "激流",
+    "effect.spellbladenext.hexed": "魔咒缠身",
+    "item.spellbladenext.runegleaming_chest": "隐烁符文胸甲",
+    "item.spellbladenext.ashherald_feet": "灰烬纹章官靴子",
+    "spell.spellbladenext.eviscerate.description": "遁入无形，在一秒内攻击最近的敌人五次，造成 {damage}_0 点物理伤害和 {damage}_1 点寒冰伤害，攻击速度对两种伤害有加成。如果施法结束前击杀目标，你可以继续对最近的敌人施法一秒。",
+    "item.spellbladenext.frostherald_head": "严寒纹章官头盔",
+    "item.spellbladenext.fire_claymore": "火焰阔剑",
+    "item.spellbladenext.frozen_feet": "死寒教士靴子",
+    "item.spellbladenext.runeblazing_feet": "烈焰符文靴子",
+    "item.spellbladenext.gleaming_chest": "隐烁教士胸甲",
+    "spell.spellbladenext.arcaneflourish.name": "奥秘华舞",
+    "item.spellbladenext.whirlwindoil": "旋风涂料",
+    "item.spellbladenext.gleaming_feet": "隐烁教士靴子",
+    "item.spellbladenext.magus_head": "源初兜帽",
+    "item.spellbladenext.frozen_head": "寻法之帽",
+    "item.spellbladenext.blazing_chest": "烈焰教士胸甲",
+    "spell.spellbladenext.frostvert.name": "龙之震击",
+    "item.spellbladenext.offering": "魔剑会之盟",
+    "item.spellbladenext.arcaneherald_feet": "神秘纹章官靴子",
+    "item.spellbladenext.runefrost_ingot": "严寒符文锭",
+    "item.spellbladenext.flickerstrikeoil": "闪击涂料",
+    "item.spellbladenext.runegleaming_legs": "隐烁符文护腿",
+    "item.spellbladenext.runefrost_plate": "严寒符文板",
+    "item.spellbladenext.frost_blade": "寒冰魔剑",
+    "effect.spellbladenext.unleash": "爆发",
+    "spell.spellbladenext.frostblink.name": "奥秘闪击",
+    "item.spellbladenext.deathchill_spell_book": "死寒之典",
+    "spell.spellbladenext.monkeyslam.name": "筋斗云",
+    "item.spellbladenext.frozen_chest": "死寒教士胸甲",
+    "spell.spellbladenext.maelstrom.name": "星海漩涡",
+    "entity.spellbladenext.magus": "魔术师",
+    "spell.spellbladenext.eldritchblast.name": "回响音爆",
+    "spell.spellbladenext.smite.name": "神罚",
+    "spell.spellbladenext.bladestorm.description": "召唤一道回响漩涡，可以跟踪目标，每半秒造成 {damage} 点奥秘伤害。每有一层爆发效果，使用后刷新冷却。",
+    "item.spellbladenext.runefrosted_head": "严寒符文头盔",
+    "item.spellbladenext.frostherald_legs": "严寒纹章官护腿",
+    "spell.spellbladenext.frostbloom0.description": "在周围释放冰霜新星，造成 {damage} 点伤害，获得一层寒冰魔能（至多四层），并同时使自己和受击敌人冰冻。寒冰魔能等级越高，伤害范围越大。",
+    "spell.spellbladenext.bladestorm.name": "回响风暴",
+    "item.spellbladenext.frozen_legs": "死寒教士护腿",
+    "item.spellbladenext.frostherald_chest": "严寒纹章官服饰",
+    "stat.spellbladenext.hex": "施法次数",
+    "item.spellbladenext.flaming_falchion": "赤燃之刃",
+    "item.spellbladenext.ashes": "众星之尘",
+    "item.spellbladenext.runeblaze_ingot": "烈焰符文锭",
+    "item.spellbladenext.blazing_feet": "烈焰教士靴子",
+    "spell.spellbladenext.frostbloom0.name": "冰霜雪莲",
+    "spell.spellbladenext.eldritchblast.description": "向目标所在方向发射冲击波，对一条线上的所有敌人造成 {damage} 点奥秘伤害。每有一层爆发效果，重复释放一次。",
+    "item.spellbladenext.crystal_cutlass": "水晶短剑",
+    "spell.spellbladenext.coldbuff.description": "如果你有寒冰魔能IV+，解冻自己并使敌人以150%的效果冻伤，并获得8秒力量V。",
+    "item.spellbladenext.runefrosted_feet": "严寒符文靴子",
+    "spell.spellbladenext.phoenixdive.name": "凤凰冲击",
+    "item.spellbladenext.frost_claymore": "寒冰阔剑",
+    "spell.spellbladenext.frostflourish.name": "寒冰华舞",
+    "item.spellbladenext.runegleam_ingot": "隐烁符文锭",
+    "spell.spellbladenext.fireflourish.name": "火焰华舞",
+    "item.spellbladenext.runegleaming_feet": "隐烁符文靴子",
+    "item.spellbladenext.prismatic": "棱镜拟像",
+    "item.spellbladenext.runefrosted_legs": "严寒符文护腿",
+    "spell.spellbladenext.amethystslash.name": "紫水晶碎溅",
+    "spell.spellbladenext.deathchill.name": "死亡寒意",
+    "spell.spellbladenext.deathchill.description": "被动：寒气入骨，暖意难近。你造成的伤害将吸取敌人的热量，致使它们冰冻。主动：迅速进入冰冻状态，获得抗性提升（施法越久，状态效果等级越高）。",
+    "effect.spellbladenext.slamming": "龙之震击",
+    "entity.spellbladenext.gladius": "寒冰剑刃",
+    "spell.spellbladenext.frostflourish.description": "快速旋转，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点寒冰伤害。",
+    "item.spellbladenext.phoenix_spell_book": "涅槃经籍",
+    "spell.spellbladenext.fireflourish.description": "快速旋转，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点火焰伤害。",
+    "item.spellbladenext.debug": "调试物品",
+    "item.spellbladenext.fire_blade": "火焰魔剑",
+    "item.spellbladenext.runegleam_nugget": "隐烁符文螺栓",
+    "item.spellbladenext.arcaneherald_legs": "神秘纹章官护腿",
+    "spell.spellbladenext.finalstrike.description": "释放一道死亡穿透声波，造成 {damage}_0 点物理伤害和 {damage}_1 点奥秘法术伤害，随后传送到被攻击的最后一个敌人身后。",
+    "item.spellbladenext.finalstrikeoil": "音击涂料",
+    "item.spellbladenext.runeblaze_nugget": "烈焰符文螺栓",
+    "item.spellbladenext.ashherald_legs": "灰烬纹章官护腿",
+    "spell.spellbladenext.echoes.description": "被动：每4秒获得一层爆发状态效果。主动：对最后一次近战攻击的敌人造成 {damage} 点奥秘伤害。可以消耗爆发的层数攻击多次。",
+    "item.spellbladenext.runegleam_plate": "隐烁符文板",
+    "spell.spellbladenext.phoenixdive.description": "向目标所在方向闪现，着陆时释放一次超新星爆炸，造成 {damage} 点火焰伤害并点燃敌人。",
+    "item.spellbladenext.gleaming_legs": "隐烁教士护腿",
+    "spell.spellbladenext.inferno.name": "炼狱之风",
+    "spell.spellbladenext.flameslash.description": "造成每秒 {damage} 点火焰伤害。肆意地挥舞你的武器并发射爆燃碎片。",
+    "block.spellbladenext.hexblade": "魔剑",
+    "spell.spellbladenext.frostslash.description": "造成每秒 {damage} 点寒冰伤害。肆意地挥舞你的武器并发射灵刃。",
+    "spell.spellbladenext.tempest.description": "持续旋转，每秒造成 {damage}_0 点物理伤害（无法暴击）和 {damage}_1 点寒冰伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将减少这个衰减。潜行以停止移动。",
+    "spell.spellbladenext.amethystslash.description": "造成每秒 {damage} 点奥秘伤害。肆意地挥舞你的武器并发射紫水晶尖刺。",
+    "spell.spellbladenext.inferno.description": "持续旋转，每秒造成 {damage}_0 点物理伤害（无法暴击）和 {damage}_1 点火焰伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将减少这个衰减。潜行以停止移动。",
+    "spell.spellbladenext.whirlwind.description": "持续旋转，每秒造成 {damage}_0 点物理伤害（无法暴击），攻击速度对两种伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将减少这个衰减。潜行以停止移动。",
+    "spell.spellbladenext.snuffout.name": "野火吹又生",
+    "item.spellbladenext.starforge": "铸星魔刃",
+    "spell.spellbladenext.frostblink.description": "传送至一名敌人身后，造成 {damage}_0 点物理伤害（无法暴击）与 {damage}_1 点奥秘伤害。",
+    "spell.spellbladenext.snuffout.description": "周遭熊熊燃烧的烈焰如炙热炼狱，着火的敌人因而点燃了它周围的同伴，造成 {damage} 点火焰伤害。",
+    "item.spellbladenext.thread": "希望之丝",
+    "spell.spellbladenext.tempest.name": "狂风暴雨",
+    "item.spellbladenext.hexbladeitem": "魔剑",
+    "spell.spellbladenext.whirlwind.name": "旋风斩",
+    "item.spellbladenext.voidforge": "无铸之刃",
+    "spell.spellbladenext.maelstrom.description": "持续旋转，每秒造成 {damage}_0 点物理伤害（无法暴击）和 {damage}_1 点奥秘伤害，攻击速度对伤害有加成。攻击多个敌人时有伤害衰减，横扫之刃将减少这个衰减。潜行以停止移动。",
+    "spell.spellbladenext.sniper.name": "烈焰符文子弹",
+    "item.spellbladenext.weaverswand": "织法者的魔杖",
+    "spell.spellbladenext.riflebarrage.description": "施法时不断射击，造成至多一倍远程伤害，每次射击根据距离对前方锥型范围内的敌人额外造成 {damage} 点伤害。",
+    "spell.spellbladenext.overblaze.description": "焚烧一条线上的敌人，造成 {damage} 点法术伤害。",
+    "spell.spellbladenext.riflebarrage.name": "破片火网",
+    "stat.spellbladenext.threat": "威胁",
+    "spell.spellbladenext.frostoverdrive.description": "对周遭敌人造成 {damage} 点寒冰伤害。在平常和攻击时触发。",
+    "spell.spellbladenext.arcaneoverdrive.description": "对周遭敌人造成 {damage} 点奥秘伤害。在平常和攻击时触发。",
+    "spell.spellbladenext.fireoverdrive.name": "火焰超载",
+    "attribute.name.spellbladenext.warding": "反应区域",
+    "attribute.name.spellbladenext.converttofrost": "攻击伤害对寒冰法术强度的额外加成",
+    "spell.spellbladenext.frostoverdrive.name": "寒冰超载",
+    "effect.spellbladenext.portalsickness": "传送门综合征",
+    "attribute.name.spellbladenext.convertfromfrost": "寒冰法术强度对攻击伤害的额外加成",
+    "effect.spellbladenext.runicabsorption": "符能吸收",
+    "spell.spellbladenext.fireoverdrive.description": "对周遭敌人造成 {damage} 点火焰伤害。在平常和攻击时触发。",
+    "item.spellbladenext.rifle": "烈焰符文枪",
+    "spell.spellbladenext.sniper.description": "为枪装弹并射击，造成两倍远程伤害和额外 {damage} 点远程物理伤害。",
+    "attribute.name.spellbladenext.convertfromfire": "火焰法术强度对攻击伤害的额外加成",
+    "spell.spellbladenext.overblaze.name": "纵火盛宴",
+    "attribute.name.spellbladenext.converttofire": "攻击伤害对火焰法术强度的额外加成",
+    "attribute.name.spellbladenext.converttoheal": "攻击伤害对治愈法术强度的额外加成"
 }
